fix alignment and add tablesorter plugin ml

--- a/com.WanderingTurtle/com.WanderingTurtle.Web/Content/Site.css
+++ b/com.WanderingTurtle/com.WanderingTurtle.Web/Content/Site.css
@@ -870,7 +870,7 @@ button.ui-button-text-only {
     padding-bottom: 10px;
 }
 
-#leftcontainer {
+#MainContent_leftcontainer {
     width: 33%;
     float: left;
 }
